--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -1,6 +1,6 @@
 \documentclass{xourse}  
  
-\title{Ideas and Images}  
+\title{Ideas and Images in Calculus}  
 %% This is the Name of your course  
 %% personalize it  
  
@@ -26,5 +26,6 @@ started with Ximera for course instructors.
 \activity{RockArt/RockArt} 
 \activity{LawofCosines/LawofCosines}
 \activity{DopplerEffect/DopplerEffect}
+\activity{Hodograph/Hodograph}
 
 \end{document}
