--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -27,5 +27,6 @@ started with Ximera for course instructors.
 \activity{LawofCosines/LawofCosines}
 \activity{DopplerEffect/DopplerEffect}
 \activity{Hodograph/Hodograph}
+\activity{FallingSlinky/FallingSlinky}
 
 \end{document}
