--- a/Hodograph/Hodograph.tex
+++ b/Hodograph/Hodograph.tex
@@ -10,6 +10,33 @@ Rotating gears.
 \maketitle
 
 
-Nothing yet.
+Just write something.
+
+Hamilton first shows that the hodograph of a planetary orbit is a circle by proving the hodograph has constant curvature. Not quite sure yet what he does, but here's a quick way.
+
+For a motion in the plane with position function ${\bf p} = {\bf p}(t)$, the hodograph is the curve ${\bf v} =d{\bf p}/dt$ traced by the tip of the pinned velocity vector. Write the acceleration as
+\[
+   {\bf a} = \frac{d{\bf v}}{dt} =  a \langle \cos\phi , \sin \phi   \rangle ,
+\]
+where $a=|{\bf a}|$ is the magnitude of the acceleration and $\phi$ is the angle from $\langle 1, 0 \rangle$ to ${\bf a}$. 
+
+So the hodograph has curvature
+\begin{align*}
+      \kappa  &= \frac{d\theta}{|d{\bf v}|}  \\
+         = \frac{\frac{d\theta}{dt}}{\Big| \frac{dv}{dt}  \Big|}
+\end{align*}
+The curvature of the hodograph with velocity ${\bf v}$ and  is equal to 
+
+First, because the force is central, the segment from the sun to the plane sweeps area at a constant rate, at say $K$ $m^2/s$.  So
+\[
+   r^2 \frac{d\theta}{dt} = 2K .
+\]
+
+Next assuming that accelaration has magnitude $k/r^2$ for some constant $k$ with units $m^3/s^2$, we know what? Thinking about the hodograph, in the differential time $dt$ seconds, the tip of the velocity vector ${\bf v} = d{\bf p}/dt$ sweeps out a differential arclength
+\[
+  ds = 
+\] 
+along the hodograph
+
 
 \end{document}
