--- a/FallingSlinky/FallingSlinky.tex
+++ b/FallingSlinky/FallingSlinky.tex
@@ -9,7 +9,20 @@ A falling slinky.
 \end{abstract}
 \maketitle
 
-dsffd
+Here's a surprising phenomenon.
+
+\begin{center}  
+\youtube{k5s1cMNTmGs}  
+\end{center}
+
+
+https://www.youtube.com/watch?v=k5s1cMNTmGs
+
+
+
+Or scroll down a bit and watch the video here.
+
+\href{dsffdhttps://vanderbei.princeton.edu/WebGL/Slinky.html}{Vanderbei}
 
 
 \end{document}
