--- a/FallingSlinky/FallingSlinky.tex
+++ b/FallingSlinky/FallingSlinky.tex
@@ -16,7 +16,7 @@ Here's a surprising phenomenon.
 \end{center}
 
 
-https://www.youtube.com/watch?v=k5s1cMNTmGs
+\href{https://www.youtube.com/watch?v=k5s1cMNTmGs}{Slinky}
 
 
 
