--- a/FallingSlinky/FallingSlinky.tex
+++ b/FallingSlinky/FallingSlinky.tex
@@ -96,11 +96,12 @@ Here's a crude attempt to model a slinky stretched under its own weight.
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{sc4bnssznd}{450}{600}  %qvk0mzy26u
+\desmos{fahf3t461i}{450}{600}  %qvk0mzy26u
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/o1ny9elbie}{151: Slinky 4}
+\href{https://www.desmos.com/calculator/fahf3t461i}{151: Slinky 2}
+o1ny9elbie
 
 
 \section{Approximations with Discrete Masses}
